tests/NormalTests/paczka1/fuzzy1/53754125.err
Error in line 6: LXFu0 A886 75,1
Error in line 10: A631 A886 44,3
Error in line 35: zh00LxKZgf A816 1,43
